--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <!-- Heading v1 -->
                         <div class="heading-v1">
                             <h2 class="heading-v1-title">Letter From The Managers</h2>
-                            <p class="heading-v1-subtitle">We are incredibly excited to present our 2018-2019 Year-End Report to you: our friends, partners, and supporters. This Year-End Report provides a glimpse into the impact we’ve made through our nonprofit services and the growth of our internal initiatives.</p>
+                            <p class="heading-v1-subtitle">We are incredibly excited to present our 2019-2020 Year-End Report to you: our friends, partners, and supporters. This Year-End Report provides a glimpse into the impact we’ve made through our nonprofit services, community engagement and internal initiatives.</p>
                         </div>
                         <!-- End Heading v1 -->
                     </div>
@@ -122,22 +122,22 @@
                 <div class="row letter-more">
                     <div class="col-md-12 sm-margin-b-50">
                         <div class="col-sm-6">
-                            <h3>Celebrating Our History and Partners</h3>
+                            <h3>Celebrating Our History & Partners</h3>
                             <p>SOURCE turned 15 this year! Although we were not able to host our anniversary event this spring, our “Grow to Give” theme still reinfused purpose and energy into our organization. We have appreciated this opportunity to celebrate and reflect on SOURCE’s partnerships and growing legacy.</p>
                             <p>Fifteen years ago, a group of passionate students with a desire to help local nonprofits founded SOURCE through a Kravis Leadership Institute case competition. To date, we have impacted over 200 local nonprofit organizations through client partnerships, IdeaJams, and workshops. SOURCE has also helped over 170 undergraduate students develop and grow as socially-minded leaders.</p>
                             <p>While our internal structure, nonprofit partners and student consultants have changed over the years, our core mission has remained consistent: empower nonprofits and develop students. It is this commitment and purpose that makes SOURCE the organization it is, and it remains our guiding light as we continue forward.</p>
                             <p>To our founders, Danny Hayman and Mike Peel, thank you for creating SOURCE and starting our story. To our nonprofit partners, thank you for trusting us, collaborating with us, and sharing your passion for service. To our students, thank you for dedicating your time, ideas and spirit to build up our community and serve our partners. To our stakeholders and supporters, thank you for believing in us and championing us in our work and vision. All of you were instrumental in ensuring SOURCE’s success these last 15 years, and we look forward to many more!</p>
-                            <h3>Strengthening Community</h3>
-                            <p>SOURCE has always relied upon the strength of our community. We feel so blessed to have brilliant alumni, passionate nonprofits, generous supporters and the close-knit Claremont McKenna College family.</p>
-                            <p>This year, we’ve hosted three alumni-led workshops for SOURCE Consultants to learn more about fundraising, client dynamics and post-graduation careers. Our Consultants instantly began applying their new knowledge to their client partnerships.</p>
+                            <h3>Innovating Our Structures & Services</h3>
+                            <p>Through our emphasis on “Grow to Give,” SOURCE experienced tremendous organizational development this year.</p>
+                            <p>We found new ways to customize and diversify our client services to meet nonprofit needs. We partnered with Gladeo in a largely remote relationship starting fall of 2019, allowing us to explore virtual services before the COVID-19 pandemic. As soon as CMC’s campus closed, our consultant teams quickly adjusted to remote work to continue adding value to their organizations during this challenging time. Now, we are trying new partnership models, like completely remote and semester-long partnerships, and we are exploring how to make these innovations sustainable beyond the pandemic.</p>
                             </div>
                             <div class="col-sm-6">
-                            <p>We grew our relationship with Claremont McKenna College by providing opportunities for the general student body through a consulting case workshop, a case competition with Pomona Hope and our annual Symposium in the Athenaeum. The case competition allowed Pomona Hope to get new perspectives on their problem statement while our Symposium facilitated conversations between our nonprofit partners and CMC students.</p>
-                            <p>We also continued to develop our nonprofit partnerships. We had seven of the most dynamic client partnerships in SOURCE’s history, with missions ranging from education to justice to homelessness and more. Our nonprofit clients pushed us to be better consultants and inspired us with their selfless work. You can read more about the partnerships below.</p>
-                            <p>In addition to our client partnerships, we also hosted 8 IdeaJams, 3 Nonprofit Lunch & Learns and and a Task Force with The Fairplex in Pomona. Through these opportunities, we shared our expertise with more groups and learned more about the nonprofit landscape.</p>
-                            <h3>Growing Sustainably</h3>
-                            <p>All of this reflection enables us to continue growing as an organization. By understanding our roots, SOURCE can focus on what’s important: our nonprofit partners and our consultants.</p>
-                            <p>As we plan for our 15th year in 2020, we are filled with gratitude for how far we’ve come and we look forward with excitement to where we’ll go next. We are incredibly thankful for our community. We could not have had such a successful year without our nonprofit partners, our hardworking consultants and our supportive stakeholders. Thank you from the bottom of our hearts!</p>
+                            <p>SOURCE also partnered with a wide variety of nonprofit organizations this year. Our clients had diverse missions and served communities from Pomona to Santa Monica. Two SOURCE teams independently worked with Fairplex, our largest nonprofit client to date. We hosted six IdeaJams and two Nonprofit Lunch & Learns, including one with Fairplex CEO Miguel Santana.</p>
+                            <p>SOURCE also redesigned our internal committees to be Community Engagement Teams dedicated to strengthening SOURCE as a bridge for collaboration and growth. Our CMC, Nonprofit and Alumni Engagement teams spent the year understanding the needs of their target cohorts and launching innovative initiatives for greater local engagement! For example, the CMC Engagement hosted our first annual Volunteer Fair in collaboration with the Claremont McKenna College Club Fair. Over a dozen local nonprofit organizations shared their volunteer and internship opportunities with students at this event.</p>
+                            <p>Looking internally, we reshaped our organization practices to ensure greater inclusivity, efficiency, and cohesion. We worked closely with CMC staff and administrators to rebuild our AC recruiting and hiring processes by refocusing them to reflect our staffing needs, organizational values, and priorities of equity and inclusion. Our team had our overnight SOURCE retreat packed with collaboration and team bonding. We improved our approaches to performance reviews, organization-wide workshops, internal communication, and more. Through these changes, we have emerged as a stronger team ready for the year ahead!</p>
+                            <h3>Designing SOURCE's Future</h3>
+                            <p>SOURCE is already actively preparing for another 15 years of success. We spent the summer building out new initiatives, hosting SOURCE-wide townhalls, and growing our capacity. Moving forward, we are even more focused on inclusion, accountability, empowerment and sustainability within our work, processes and team. Between simple changes in our internal community to large reconstructions of our hiring processes, our team is working diligently to strengthen SOURCE’s foundation and future.</p>
+                            <p>Again, we are so thankful for the contributions and support of our partners. SOURCE is entering into another exciting phase as an organization, and we could not do it without you. We are excited for you to read more about this year below, and look forward to connecting soon!</p>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <br>
                         <div class="signature col-md-12">
                             <h3>Best,</h3>
-                            <h3>Lisa Hao, Lili Muskal, and Kelly Lyons</h3>
+                            <h3>Kelly Lyons, Lisa Hao, and Katrina Frei-Herrmann</h3>
                         </div>
                 </div>
                 <div class="row">
